helper image utilisant Imagine

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.0.*",
-	    "way/generators": "dev-master"
+	    "way/generators": "dev-master",
+	    "imagine/imagine": "0.6.*@dev"
 	},
 	"autoload": {
 		"classmap": [
@@ -14,7 +15,9 @@
 			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
-			"app/tests/TestCase.php"
+			"app/tests/TestCase.php",
+			"app/services",
+			"app/facades"
 		]
 	},
 	"scripts": {
