--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,13 @@
 		"classmap": [
 			"app/commands",
 			"app/controllers",
-			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php",
 			"app/services",
-			"app/facades"
+			"app/facades",
+			"app/runBelgium",
+			"app/errors.php"
 		]
 	},
 	"scripts": {
